fix: allow relative image URLs in sanitized content